--- a/server/pages/css/styles.css
+++ b/server/pages/css/styles.css
@@ -28,6 +28,10 @@ h1, h2, h3, h4, h5, h6 {
     transition: color 0.5s, border-radius 0.5s, box-shadow 0.1s;
 }
 
+div {
+    text-align: center;
+}
+
 /*///////////////////////////////////////LIST/////////////////////////////*/
 #lst {
     font-family: Segoe UI Light, monospace;
@@ -121,11 +125,20 @@ h1, h2, h3, h4, h5, h6 {
 
 /*///////////////////////IMAGE /////////////////////////////*/
 img {
-    position: 50% 0;
     border-radius: 30px;
     border-style: solid;
     border-width: 2px;
     border-color: silver;
     box-shadow: inset 0 20px 1px rgba(0, 0, 0, 0.6);
     opacity: 0.5;
+}
+
+#ddImg {
+    display: block;
+    transition: all 0.5s;
+}
+
+#ddImg:hover {
+    display: none;
+    transition: all 0.5s;
 }
