--- a/server/pages/css/styles.css
+++ b/server/pages/css/styles.css
@@ -4,6 +4,41 @@ body {
     background-repeat: repeat, repeat;
 }
 
+/*///////////////////////MENU/////////////////////////////*/
+#menu  {
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    list-style-type: none;
+    border-radius: 40px;
+    background-color: rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s;
+}
+
+#menu:hover {
+    transform: translate(0, 0);
+    transition: transform 0.3s;
+}
+
+#menu li {
+    text-align: center;
+    margin-left: 37%;
+    background-color: #9AAAE2;
+    font-family: "Segoe UI Light", monospace;
+    font-size: 30px;
+    min-width: 23.7%;
+    display: inline-block;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.3s;
+}
+
+#menu li:hover {
+    background-color: #9D70CA;
+    box-shadow: inset 10px 10px 0 rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.3s;
+}
+
 /*///////////////////////HEADERS/////////////////////////////*/
 h1, h2, h3, h4, h5, h6 {
     text-align: center;
@@ -27,7 +62,7 @@ h1, h2, h3, h4, h5, h6 {
     transition: color 0.5s, border-radius 0.3s ease-in-out, box-shadow 0.5s;
 }
 
-.sHeader:hover {
+.sHeader:hover, #footer:hover {
     color: white;
     border-radius: 50px 0;
     box-shadow: 60px 10px 5px rgba(0, 0, 0, 0.05), 0 0 30px 10px #AEAAF0;
@@ -37,6 +72,10 @@ h1, h2, h3, h4, h5, h6 {
 
 div {
     text-align: center;
+}
+
+#valid{
+    display: inline;
 }
 
 /*///////////////////////////////////////LIST/////////////////////////////*/
@@ -160,4 +199,26 @@ img {
 #ddImg:hover {
     display: none;
     transition: all 0.5s;
+}
+
+#fCSS, #fHTML {
+    position: relative;
+    width: 80px;
+    height: 60px;
+}
+
+/*/////////////////////// FOOTER /////////////////////////////*/
+#footer {
+    color: #FC3DFA;
+    font-family: "Segoe UI Light", monospace;
+    font-style: italic;
+    font-size: 45px;
+    text-align: center;
+    box-shadow: 10px 10px 5px rgba(0, 0, 0, 0.3);
+    margin: 90px 0 0 0;
+    background-color: rgba(78, 0, 107, 0.5);
+    border-style: solid;
+    border-color: #AE00F0;
+    border-radius: 0 50px;
+    transition: color 0.5s, border-radius 0.3s ease-in-out, box-shadow 0.5s;
 }
