--- a/server/pages/css/styles.css
+++ b/server/pages/css/styles.css
@@ -6,12 +6,12 @@ body {
 
 /*///////////////////////MENU/////////////////////////////*/
 #menu, #menu404  {
+    margin: 0;
     position: fixed;
     left: 0;
     right: 0;
     top: 0;
     list-style-type: none;
-    border-radius: 40px;
     background-color: rgba(0, 0, 0, 0.5);
     transition: transform 0.3s;
 }
