--- a/server/pages/css/styles.css
+++ b/server/pages/css/styles.css
@@ -21,9 +21,20 @@ body {
     transition: transform 0.3s;
 }
 
-#menu li, #menu404 li {
+#menu li {
     text-align: center;
-    margin-left: 37%;
+    margin: 0 13%;
+    font-family: "Segoe UI Light", monospace;
+    font-size: 30px;
+    min-width: 23.7%;
+    background-color: #9AAAE2;
+    display: inline-block;
+    box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.3);
+    transition: box-shadow 0.3s;
+}
+
+#menu404 li {
+    margin: 0 36%;
     background-color: #9AAAE2;
     font-family: "Segoe UI Light", monospace;
     font-size: 30px;
@@ -37,6 +48,45 @@ body {
     background-color: #9D70CA;
     box-shadow: inset 10px 10px 0 rgba(0, 0, 0, 0.3);
     transition: box-shadow 0.3s;
+}
+
+#menu li a, .dd, #menu404 li a {
+    display: block;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+#menu li.dd-menu {
+    display: inline-block;
+}
+
+#menu .dd-content {
+    z-index: -9;
+    position: absolute;
+    background-color: #D395EC;
+    min-width: 220px;
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: opacity 0.5s;
+}
+
+#menu .dd-menu:hover .dd-content {
+    z-index: 10;
+    opacity: 1;
+    transition: opacity 0.5s;
+}
+
+#menu .dd-content a {
+    font-size: 20px;
+    background-color: #DDBBFF;
+    transition: font-size 0.3s;
+}
+
+#menu .dd-content a:hover {
+    font-size: 25px;
+    background-color: #C78EFF;
+    transition: font-size 0.3s;
 }
 
 /*///////////////////////HEADERS/////////////////////////////*/
@@ -74,7 +124,7 @@ div {
     text-align: center;
 }
 
-#valid{
+#valid {
     display: inline;
 }
 
